# ACTSoftware

./: 10-act_drvs.rules  CMakeLists.txt  README.md  bugs.txt  drivers_init_script.sh  svnversion.cmake  syslog_config
drivers/: CMakeLists.txt  Makefile  load_drivers_script.sh
drivers/act_plc/: act_plc.c  act_plc.h
drivers/merlin_driver/: ccd_defs.h  merlin_driver.c  merlin_driver.h
drivers/motor_driver/: motor_defs.h  motor_driver.c  motor_driver.h  motor_funcs.c  motor_funcs.h  motor_intfce.c  motor_intfce.h  soft_limits.h
drivers/plc_ldisc/: plc_ldisc.c  plc_ldisc.h
drivers/pmt_driver/: pmt_defs.h  pmt_driver.c  pmt_driver.h
drivers/time_driver/: parapin.h  time_driver.c  time_driver.h
libs/: CMakeLists.txt  act_ipc.h  act_log.c  act_log.h  act_positastro.c  act_positastro.h  act_site.h  act_timecoord.c  act_timecoord.h
softw/: CMakeLists.txt
softw/act_acq/: CMakeLists.txt  acq_ccdcntrl.c  acq_ccdcntrl.h  acq_imgdisp.c  acq_imgdisp.h  acq_marshallers.c  acq_marshallers.h  acq_net.c  acq_net.h  acq_store.c  acq_store.h  act_acq.c  ccd_cntrl.c  ccd_cntrl.h  ccd_img.c  ccd_img.h  expose_dialog.c  expose_dialog.h  imgdisp.c  imgdisp.h  marshallers.c  marshallers.h  marshallers.txt  pattern_match.c  pattern_match.h  point_list.c  point_list.h  view_param_dialog.c  view_param_dialog.h
softw/act_acq/sep/: .sconsign.dblite  analyse.os  aper.os  back.os  convolve.os  deblend.os  extract.os  lutz.os  sconstruct  util.os
softw/act_acq/unit_tests/: disp_db_img.c  imgdisp_test  imgdisp_test.c  patmatch_test.c  sep_test.c
softw/act_control/: CMakeLists.txt  act_control.c  act_control_config.c  act_control_config.h  net_basic.c  net_basic.h  net_dataccd.c  net_dataccd.h  net_datapmt.c  net_datapmt.h  net_genl.c  net_genl.h  net_targset.c  net_targset.h  subprogrammes.c  subprogrammes.h
softw/act_dti/: CMakeLists.txt  acqmir.c  acqmir.h  act_dti.c  aperture.c  aperture.h  domemove.c  domemove.h  domeshutter.c  domeshutter.h  dropout.c  dropout.h  dti_config.c  dti_config.h  dti_marshallers.c  dti_marshallers.h  dti_marshallers.txt  dti_motor.c  dti_motor.h  dti_net.c  dti_net.h  dti_plc.c  dti_plc.h  dtimisc.c  dtimisc.h  ehtdialog.c  ehtdialog.h  filter.c  filter.h  focusdialog.c  focusdialog.h  form_main.c  form_main.h  instrshutt.c  instrshutt.h  pointing_model.h  telmove.c  telmove.h  telmove_coorddialog.c  telmove_coorddialog.h  (+1 more)
softw/act_dti/unit_tests/: acqmir_tester.c  aperture_tester.c  domemove_tester.c  domeshutter_tester.c  dropout_tester.c  dtimisc_tester.c  filter_tester.c  instrshutt_tester.c  telmove_tester.c
softw/act_environ/: CMakeLists.txt  act_environ.c  env_weather.c  env_weather.h  salt_extract.c  salt_extract.h  salt_weath.c  salt_weath.h  swasp_scrape.c  swasp_scrape.h  swasp_weath.c  swasp_weath.h
softw/act_pmtphot/: CMakeLists.txt  act_pmtphot.c  pmtfuncs.c  pmtfuncs.h  pmtphot_plot.c  pmtphot_plot.h  pmtphot_storeinteg.c  pmtphot_storeinteg.h  pmtphot_view.c  pmtphot_view.h
softw/act_sched/: CMakeLists.txt  act_sched.c
softw/act_timecoord_disp/: CMakeLists.txt  act_timecoord_disp.c
utils/: CMakeLists.txt  merlin_driver_test.c  merlin_sim.c  motor_gen_soft_lim.c  motor_set_init.c  motor_set_pos.c  motor_sim.c  motor_stat.c  plc_hog.c  plc_remote_simulator.c  plc_sim.c  pmt_driver_test.c  pmt_set_channel.c  pmt_set_overillum_rate.c  pmt_test.c  time_resync.c
utils/merlin_utils/acqsim/: E702.fits  E702A.fits  E801.fits  acqsim.c  compile.sh
utils/merlin_utils/driver_test/: README.txt  tester_txt.c
utils/merlin_utils/ztest/: ztest.c
utils/motor_utils/set_track_rate/: set_track_rate.c
utils/plc_utils/plc_hog/: Makefile  plc_hog.c
utils/plc_utils/remote_simulator/: README  plc_definitions.h  simulator
utils/plc_utils/set_ldisc/: README  set_ldisc  set_ldisc.c
utils/plc_utils/test_comm/: test_comm  test_comm.c
utils/pmt_utils/driver_test/: driver_test.c
