CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
PROJECT(act)

SET(ACT_INSTALL_PREFIX "/usr/local" CACHE PATH "Prefix prepended to install directories")
SET(CMAKE_INSTALL_PREFIX "${ACT_INSTALL_PREFIX}" CACHE INTERNAL "Prefix prepended to install directories" FORCE)

SET (ACT_VERSION_MAJOR 3)
ADD_DEFINITIONS(-DMAJOR_VER=${ACT_VERSION_MAJOR})
FIND_PACKAGE(Subversion)
IF(Subversion_FOUND)
  Subversion_WC_INFO(${PROJECT_SOURCE_DIR} ACT_SVN)
  SET(ACT_VERSION_MINOR ${ACT_SVN_WC_REVISION})
ELSE(Subversion_FOUND)
  SET (ACT_VERSION_MINOR 0)
ENDIF(Subversion_FOUND)
ADD_DEFINITIONS(-DMINOR_VER=${ACT_VERSION_MINOR})

SET(ACT_DRV_SRC ${PROJECT_SOURCE_DIR}/drivers)
SET(ACT_LIB_SRC ${PROJECT_SOURCE_DIR}/libs)
SET(ACT_UTIL_SRC ${PROJECT_SOURCE_DIR}/utils)
SET(ACT_SOFTW_SRC ${PROJECT_SOURCE_DIR}/softw)

ADD_SUBDIRECTORY(${ACT_DRV_SRC})
ADD_SUBDIRECTORY(${ACT_LIB_SRC})
ADD_SUBDIRECTORY(${ACT_UTIL_SRC})
ADD_SUBDIRECTORY(${ACT_SOFTW_SRC})
