SET(ACT_IPC_HEADERS act_ipc.h)
SET(ACT_SITE_HEADERS act_site.h)
INSTALL (FILES ${ACT_IPC_HEADERS} ${ACT_SITE_HEADERS} DESTINATION include)

SET(ACT_LOG_HEADERS act_log.h)
SET(ACT_LOG_SOURCE act_log.c)
ADD_LIBRARY(act_log STATIC ${ACT_LOG_HEADERS} ${ACT_LOG_SOURCE})

SET(ACT_TIMECOORD_HEADERS act_timecoord.h)
SET(ACT_TIMECOORD_SOURCE act_timecoord.c)
ADD_LIBRARY(act_timecoord STATIC ${ACT_TIMECOORD_HEADERS} ${ACT_TIMECOORD_SOURCE})

SET(ACT_POSITASTRO_HEADERS act_positastro.h)
SET(ACT_POSITASTRO_SOURCE act_positastro.c)
ADD_LIBRARY(act_positastro STATIC ${ACT_POSITASTRO_HEADERS} ${ACT_POSITASTRO_SOURCE} ${ACT_SITE_HEADERS} ${ACT_TIMECOORD_HEADERS})