FIND_PACKAGE(GTK2 REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(CFITSIO REQUIRED)

PKG_CHECK_MODULES(GTKGL REQUIRED gtkglext-1.0)
LINK_DIRECTORIES(${GTKGL_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${GTKGL_INCLUDE_DIRS})

PKG_CHECK_MODULES(ARGTABLE REQUIRED argtable2)
LINK_DIRECTORIES(${ARGTABLE_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${ARGTABLE_INCLUDE_DIRS})

# PKG_CHECK_MODULES(FITS REQUIRED argtable2)
LINK_DIRECTORIES(${CFITSIO_LIBRARIES})
INCLUDE_DIRECTORIES(${CFITSIO_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${ACT_DRV_SRC}/merlin_driver)
INCLUDE_DIRECTORIES(${ACT_LIB_SRC})
INCLUDE_DIRECTORIES(${GTK2_INCLUDE_DIRS})
ADD_DEFINITIONS(-DACT_FILES_PATH="${ACT_INSTALL_PREFIX}/act_files")
INSTALL(FILES act_brightness_icon.png act_contrast_icon.png DESTINATION ${ACT_INSTALL_PREFIX}/local/act_files)
SET(ACQ_SOURCE_FILES act_acq.c acq_ccdcntrl.c acq_ccdcntrl.h acq_imgdisp.c acq_imgdisp.h pattern_match.c pattern_match.h)
ADD_EXECUTABLE(act_acq ${ACQ_SOURCE_FILES} ${ACT_LIB_SRC}/act_ipc.h ${ACT_LIB_SRC}/act_positastro.h ${ACT_LIB_SRC}/act_log.h)
TARGET_LINK_LIBRARIES(act_acq ${GTK2_LIBRARIES} ${GTKGL_LIBRARIES} ${ARGTABLE_LIBRARIES} m mysqlclient cfitsio act_log act_timecoord act_positastro)
INSTALL(TARGETS act_acq RUNTIME DESTINATION bin)