LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")
FIND_PACKAGE(GTK2 REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(CFITSIO REQUIRED)

PKG_CHECK_MODULES(GTKGL REQUIRED gtkglext-1.0)
LINK_DIRECTORIES(${GTKGL_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${GTKGL_INCLUDE_DIRS})

PKG_CHECK_MODULES(ARGTABLE REQUIRED argtable2)
LINK_DIRECTORIES(${ARGTABLE_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${ARGTABLE_INCLUDE_DIRS})

LINK_DIRECTORIES(${CFITSIO_LIBRARIES})
INCLUDE_DIRECTORIES(${CFITSIO_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${ACT_DRV_SRC}/merlin_driver)
INCLUDE_DIRECTORIES(${ACT_LIB_SRC})
INCLUDE_DIRECTORIES(${GTK2_INCLUDE_DIRS})
#ADD_DEFINITIONS(-DACT_FILES_PATH="${ACT_INSTALL_PREFIX}/act_files")
#INSTALL(FILES act_brightness_icon.png act_contrast_icon.png DESTINATION ${ACT_INSTALL_PREFIX}/local/act_files)
# SET(ACQ_SOURCE_FILES act_acq.c acq_ccdcntrl.c acq_ccdcntrl.h acq_imgdisp.c acq_imgdisp.h pattern_match.c pattern_match.h)
SET(ACQ_SOURCE_FILES acq_net.c  acq_store.c  act_acq.c  ccd_cntrl.c  ccd_img.c  expose_dialog.c  imgdisp.c  marshallers.c  pattern_match.c  point_list.c  view_param_dialog.c sep/analyse.c  sep/aper.c  sep/back.c  sep/convolve.c  sep/deblend.c  sep/extract.c  sep/lutz.c  sep/util.c)
ADD_EXECUTABLE(act_acq ${ACQ_SOURCE_FILES} ${ACT_LIB_SRC}/act_ipc.h ${ACT_LIB_SRC}/act_positastro.h ${ACT_LIB_SRC}/act_log.h)
TARGET_LINK_LIBRARIES(act_acq ${GTK2_LIBRARIES} ${GTKGL_LIBRARIES} ${ARGTABLE_LIBRARIES} m mysqlclient cfitsio pthread act_log act_timecoord act_positastro)
INSTALL(TARGETS act_acq RUNTIME DESTINATION bin)