FIND_PACKAGE(GTK2 REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(ARGTABLE REQUIRED argtable2)
LINK_DIRECTORIES(${ARGTABLE_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${ARGTABLE_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${ACT_DRV_SRC}/time_driver)
INCLUDE_DIRECTORIES(${ACT_LIB_SRC})
INCLUDE_DIRECTORIES(${GTK2_INCLUDE_DIRS})
SET(TIMEDISP_SOURCE_FILES act_timecoord_disp.c)
ADD_EXECUTABLE(act_timecoord_disp ${TIMEDISP_SOURCE_FILES} ${ACT_DRV_SRC}/time_driver/time_driver.h ${ACT_LIB_SRC}/act_ipc.h ${ACT_LIB_SRC}/act_timecoord.h ${ACT_LIB_SRC}/act_positastro.h ${ACT_LIB_SRC}/act_log.h)
TARGET_LINK_LIBRARIES(act_timecoord_disp ${GTK2_LIBRARIES} ${GTKGL_LIBRARIES} ${ARGTABLE_LIBRARIES} m act_log act_timecoord act_positastro)
